added paging and setup for new machine
