# Domain/LedgerTransactions/LedgerTransactionRequestDto.cs
@@ -1,0 +1,8 @@
+namespace Domain.LedgerTransactions
+{
+    public class LedgerTransactionRequestDto
+    {
+        public int Skip { get; set; }
+        public int PageSize { get; set; }
+    }
+}
